# FlashPerceiver

./: .gitignore  README.md  create_plots.py  pyproject.toml  run_benchmarks.py  scratch.py
examples/: cifar_classification.py
fast_perceiver/: __init__.py  adapters.py  modules.py  perceiver.py  pos_encodings.py  utils.py
fast_perceiver/utils/: __init__.py
flash_perceiver/: __init__.py  adapters.py  perceiver.py
flash_perceiver/utils/: __init__.py  encodings.py
tests/: __init__.py  test_adapters.py  test_mha.py  test_perceiver.py  test_perceiver_base.py  test_perceiver_io.py
