[tool.poetry]
name = "fast-perceiver"
version = "0.1.2"
description = ""
authors = ["Kristian Klemon <kristian.klemon@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_perceiver"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.0.1", source = "pytorch-gpu-src"}
torchvision = {version = "^0.15.2", source = "pytorch-gpu-src"}
einops = "^0.6.1"
flash-attn = "^2.0.0.post1"
packaging = "^23.1"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
tqdm = "^4.65.0"
pandas = "^2.0.3"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
perceiver-pytorch = "^0.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
